name:                camera
version:             0.0.3.0
synopsis:            Generate transformation matrices for a virtual camera
homepage:            https://github.com/isomorphism/camera
license:             BSD3
license-file:        LICENSE
author:              C. A. McCann
maintainer:          cam@uptoisomorphism.net
copyright:           (c) 2015 C. A. McCann
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
description:
  This package provides a wide assortment of ways to control the properties of
  a virtual camera and then generate the appropriate projection matrix. It 
  allows adjusting the "focal length", setting the viewport dimensions/aspect 
  ratio and automatically adjusting the projection to match, orbit the camera
  around a target point, &c.
  .
  The primary API for this package relies on @lens@, but usage examples are
  provided for anyone unfamiliar with it.

library
  exposed-modules:      Graphics.Camera, 
                        Graphics.Camera.Classes, 
                        Graphics.Camera.Angle, 
                        Graphics.Camera.Internal, 
                        Graphics.Camera.Types
  other-extensions:     ConstraintKinds, 
                        TypeFamilies, 
                        MultiParamTypeClasses, 
                        RankNTypes, 
                        GeneralizedNewtypeDeriving, 
                        UndecidableInstances, 
                        FlexibleInstances, 
                        FlexibleContexts, 
                        DeriveDataTypeable, 
                        TemplateHaskell
  build-depends:        base   >= 4.6  && < 5, 
                        linear >= 1.19 && < 2, 
                        lens   >= 4.8  && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
